[workspace]
resolver = "3"
members = ["modules/web_console", "modules/web_encoding", "modules/web_fetch", "modules/deno_common", "modules/deno_fs", "modules/deno_ns", "modules/deno_os", "modules/web_navigator", "modules/node_process", "modules/web_url", "modules/utils", "modules/utils/macros", "modules/mdeno_path_util", "modules/web_crypto", "modules/deno_test",
    "cli/runtime",
    "cli",
]

[workspace.lints.clippy]
# Enable all lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Panic prevention (deny in production code)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"

# Debug artifacts
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Restriction lints
exit = "deny"

# Allow pedantic lints that are too noisy
must_use_candidate = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow" # FFI boundaries (rquickjs, add_internal_function!) require owned values

# Allow cargo lints for transitive dependencies
multiple_crate_versions = "allow" # Can't control transitive dependency versions

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
