[package]
name = "mdeno"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mdeno"
path = "src/lib.rs"

[[bin]]
name = "mdeno"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.100"
clap_lex = "=0.7.7"
deno_terminal = "=0.2.3"
libsui = "=0.12.6"
mdeno_path_util = { path = "../modules/mdeno_path_util" }
mdeno_runtime = { path = "runtime" }
utils = { path = "../modules/utils" }
oxc_allocator = "=0.111.0"
oxc_ast = "=0.111.0"
oxc_codegen = "=0.111.0"
oxc_parser = "=0.111.0"
oxc_semantic = "=0.111.0"
oxc_span = "=0.111.0"
oxc_transformer = "=0.111.0"
cyper = "=0.7.1"
compio = { version = "0.17", features = ["runtime", "time"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = ["native-tls"]
native-tls = ["mdeno_runtime/native-tls"]
rustls = ["mdeno_runtime/rustls"]
