[package]
name = "mdeno_runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mdeno_runtime"
path = "src/lib.rs"

[[bin]]
name = "mdenort"
path = "src/main.rs"

[features]
default = ["console", "navigator", "url", "encoding", "fetch", "deno_fs", "deno_os", "deno_ns"]
console = ["dep:web_console"]
navigator = ["dep:web_navigator"]
url = ["dep:web_url"]
encoding = ["dep:web_encoding"]
fetch = ["dep:web_fetch"]
rustls = ["web_fetch?/rustls"]
deno_fs = ["dep:deno_fs"]
deno_os = ["dep:deno_os"]
deno_ns = ["dep:deno_ns"]

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader", "futures"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
utils = { path = "../../modules/utils" }
libsui = { version = "0.12.5" }
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8.12"

# Modules
deno_common = { path = "../../modules/deno_common" }
deno_fs = { path = "../../modules/deno_fs", optional = true }
deno_ns = { path = "../../modules/deno_ns", optional = true }
deno_os = { path = "../../modules/deno_os", optional = true }
web_console = { path = "../../modules/web_console", optional = true }
web_encoding = { path = "../../modules/web_encoding", optional = true }
web_fetch = { path = "../../modules/web_fetch", optional = true, default-features = false }
web_navigator = { path = "../../modules/web_navigator", optional = true }
web_url = { path = "../../modules/web_url", optional = true }
