[package]
name = "mdeno_runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mdeno_runtime"
path = "src/lib.rs"

[[bin]]
name = "mdenort"
path = "src/main.rs"

[features]
default = []
native-tls = ["web_fetch/native-tls"]
rustls = ["web_fetch/rustls"]

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader", "futures"] }
compio = { version = "0.17.0" }
compio-runtime = { version = "0.10.0" }
utils = { path = "../../modules/utils" }
libsui = { version = "0.12.5" }
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8.12"

# Modules
deno_common = { path = "../../modules/deno_common" }
deno_fs = { path = "../../modules/deno_fs" }
deno_ns = { path = "../../modules/deno_ns" }
deno_os = { path = "../../modules/deno_os" }
deno_test = { path = "../../modules/deno_test" }
web_console = { path = "../../modules/web_console" }
web_crypto = { path = "../../modules/web_crypto" }
web_encoding = { path = "../../modules/web_encoding" }
web_fetch = { path = "../../modules/web_fetch" }
web_navigator = { path = "../../modules/web_navigator" }
web_url = { path = "../../modules/web_url" }

[lints.clippy]
# Enable all lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Panic prevention (deny in production code)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"

# Debug artifacts
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "allow" # Binary: error output to stderr
exit = "allow" # Binary: intentional process exit

# Allow pedantic lints that are too noisy
must_use_candidate = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow"

# Allow cargo lints for transitive dependencies
multiple_crate_versions = "allow"
