[package]
name = "deno_fs"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader"] }
utils = { path = "../utils" }
utils_macros = { path = "../utils/macros" }
tempfile = "3.24.0"

[lints]
workspace = true
