[package]
name = "deno_os"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
libsui = { version = "0.12.5" }
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader"] }
serde_json = { version = "1.0.148" }
utils = { path = "../utils" }

[lints]
workspace = true
