[package]
name = "web_fetch"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[features]
default = []
native-tls = ["cyper/native-tls"]
rustls = ["cyper/rustls", "compio-tls/ring"]

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader", "futures", "macro"] }
cyper = { version = "=0.7.1", default-features = false }
compio-tls = { version = "0.8.0", default-features = false, optional = true }
once_cell = { version = "1.21.3" }
serde_json = { version = "1.0.148" }
ars = "0.0.2"
utils = { path = "../utils" }

[lints]
workspace = true
