[package]
name = "web_navigator"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader"] }
sys-locale = "0.3.2"
utils = { path = "../utils" }
utils_macros = { path = "../utils/macros" }

[lints]
workspace = true
