[package]
name = "web_url"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
rquickjs = { version = "=0.11.0", features = ["classes", "properties", "loader"] }
ada-url = { version = "3.3.0", features=["libcpp"]}
serde_json = "1.0.145"
utils = { path = "../utils" }
