[package]
name = "utils_macros"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
oxc_allocator = "0.111.0"
oxc_codegen = "0.111.0"
oxc_parser = "0.111.0"
oxc_semantic = "0.111.0"
oxc_span = "0.111.0"
oxc_transformer = "0.111.0"

[lints]
workspace = true
